<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quick List</string>
    <string name="nothing_here">There is nothing here</string>
    <string name="delete">Delete</string>
    <string name="menu_add_item">Add Item</string>
    <string name="menu_order_list">Sort</string>
    <string name="menu_delete_list">Delete List</string>
    <string name="menu_new_list">New List</string>
    <string name="menu_open_list">Open List</string>
    <string name="menu_check_all">Check All</string>
    <string name="menu_uncheck_all">Uncheck All</string>
    <string name="launch_desc">Launch Quick List</string>
    <string name="new_item_desc">New Item</string>

    <string-array name="orders">
        <item>Order added</item>
        <item>Alphabetically</item>
        <item>Checked last</item>
        <item>Alpha and checked</item>
    </string-array>

    <string name="title_activity_dialog">Dialog</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>