<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_add_item"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/menu_add_item"
        android:icon="@drawable/ic_add_item"/>
    <item
        android:id="@+id/menu_order_list"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/menu_order_list"
        android:icon="@drawable/ic_order_list"/>
    <item
        android:id="@+id/menu_open_list"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/menu_open_list"
        android:icon="@drawable/ic_open_list"/>
    <item
        android:id="@+id/menu_new_list"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/menu_new_list"
        android:icon="@drawable/ic_new_list"/>
    <item
        android:id="@+id/menu_check_all"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/menu_check_all" />
    <item
        android:id="@+id/menu_uncheck_all"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/menu_uncheck_all" />
    <item
        android:id="@+id/menu_delete_list"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/menu_delete_list"
        android:icon="@drawable/ic_delete_list"/>
</menu>